--- a/5eNPCCreator/src/PCGUI.form
+++ b/5eNPCCreator/src/PCGUI.form
@@ -492,8 +492,16 @@
                 <Component class="javax.swing.JComboBox" name="RaceComboBox">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="1">
+                      <StringArray count="9">
                         <StringItem index="0" value="Human"/>
+                        <StringItem index="1" value="Elf"/>
+                        <StringItem index="2" value="Dwarf"/>
+                        <StringItem index="3" value="Tiefling"/>
+                        <StringItem index="4" value="Dragonborn"/>
+                        <StringItem index="5" value="Half-Orc"/>
+                        <StringItem index="6" value="Half-Elf"/>
+                        <StringItem index="7" value="Halfling"/>
+                        <StringItem index="8" value="Gnome"/>
                       </StringArray>
                     </Property>
                   </Properties>
